--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"semver-utils": "^1.1.1",
 		"tether-drop": "^1.4.2",
 		"tiny-uuid": "^1.0.0",
+		"typo-js": "^1.1.0",
 		"unfetch": "^3.0.0",
 		"vue": "^1.0.18",
 		"vue-router": "^0.7.13",
